--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "author": "Shaun Lebron",
   "license": "ISC",
+  "scripts": {
+    "build": "shadow-cljs compile printSexp"
+  },
   "dependencies": {
     "prettier": "1.15.3"
   },
   "devDependencies": {
+    "shadow-cljs": "^2.7.6",
     "tree-sitter": "^0.13.23",
     "tree-sitter-clojure": "^0.2.0"
   }
