--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "prettier": "^1.15.3",
     "shadow-cljs": "^2.7.6",
     "tree-sitter": "^0.13.23",
-    "tree-sitter-clojure": "^0.2.0"
+    "tree-sitter-javascript": "^0.13.8"
   }
 }
