--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Shaun Lebron",
   "license": "ISC",
   "scripts": {
-    "build": "shadow-cljs release printSexp"
+    "build": "shadow-cljs release printSexp && prepend printSexp.js '// AUTO-GENERATED from src-cljs/\n'"
   },
   "dependencies": {},
   "devDependencies": {
+    "prepend-file-cli": "^1.0.6",
     "prettier": "^1.15.3",
     "shadow-cljs": "^2.7.6",
     "tree-sitter": "^0.13.23",
