--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Shaun Lebron",
   "license": "ISC",
   "scripts": {
-    "build": "shadow-cljs release print && prepend src/print.js '// AUTO-GENERATED from print.js\n'"
+    "build": "shadow-cljs release print"
   },
   "dependencies": {
     "postcss-selector-parser": "^5.0.0-rc.4"
@@ -14,9 +14,8 @@
   "devDependencies": {
     "cson": "^5.1.0",
     "language-javascript": "^0.128.0-0",
-    "prepend-file-cli": "^1.0.6",
     "prettier": "^1.15.3",
-    "shadow-cljs": "^2.7.6",
+    "shadow-cljs": "^2.7.8",
     "tree-sitter": "^0.13.23",
     "tree-sitter-javascript": "^0.13.8"
   }
